@@ -1,5 +1,6 @@
 package raff.stein.customer.service.aml.pipeline;
 
+import lombok.NonNull;
 import org.springframework.stereotype.Component;
 import raff.stein.customer.service.aml.pipeline.config.AmlConfiguration;
 import raff.stein.customer.service.aml.pipeline.config.AmlProperties;
@@ -19,18 +20,21 @@ public class AmlPipelineFactory {
 
     public AmlPipelineFactory(AmlConfiguration config, List<AmlStep> allSteps) {
         this.config = config;
-        this.stepMap = allSteps.stream()
+        this.stepMap = allSteps
+                .stream()
                 .collect(Collectors.toMap(AmlStep::name, Function.identity()));
     }
 
-    public List<AmlStep> build(String jurisdiction) {
+    public List<AmlStep> build(@NonNull String jurisdiction) {
         final List<AmlProperties.StepConfig> stepConfigs = config.getStepsFor(jurisdiction);
         return stepConfigs
                 .stream()
                 .filter(sc -> sc.getEnabled() != null && sc.getEnabled())
-                .map(sc -> stepMap.get(sc.getName()))
+                // step name is prefixed with jurisdiction to allow same step in different jurisdictions
+                // e.g. "ue-sanctions-screening-step"
+                .map(sc -> stepMap.get(jurisdiction + "-" + sc.getName()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
